--- a/005_process_collect_dataset/003_rename_imgs_datasets/config.yaml
+++ b/005_process_collect_dataset/003_rename_imgs_datasets/config.yaml
@@ -1,3 +1,3 @@
-path_in: "/Users/YaVolkonskiy/Documents/001_Projects/005_car_number/data/001_raw_data/001_plates/004_trains_Zaharov"
-path_out: "/Users/YaVolkonskiy/Documents/001_Projects/005_car_number/data/001_raw_data/001_plates/004_trains_Zaharov_rename"
-prefix: 004_Zaharov
+path_in: "/home/yaroslav/Documents/001_Projects/005_car_number/data/001_raw_data/001_plates/007_gorniy102"
+path_out: "/home/yaroslav/Documents/001_Projects/005_car_number/data/001_raw_data/001_plates/007_gorniy102_rename/"
+prefix: 007_gorniy102
