infer yolo one dir

--- a/001_yolo_tools/013_yolo_inference_dir/001_yolo_inference_many_dir/config.yaml
+++ b/001_yolo_tools/013_yolo_inference_dir/001_yolo_inference_many_dir/config.yaml
@@ -2,6 +2,7 @@ weights_yolo: "/home/yaroslav/Documents/001_Projects/002_tops/003_expiriments/00
 src: "/home/yaroslav/Documents/001_Projects/002_tops/005_labeling/001_data_28_01_25"
 dst: "/home/yaroslav/Documents/001_Projects/002_tops/003_expiriments/003_expiriments_tops/out_inference/004"
 classes: [0, 1]  # опционально
+device: 0 # gpu
 
 
 # Параметры модели YOLO
