--- a/001_yolo_tools/014_compare_results_yolo/config.yaml
+++ b/001_yolo_tools/014_compare_results_yolo/config.yaml
@@ -1,2 +1,2 @@
-src: "/Users/yaroslav/Downloads/results"  # путь к директории с экспериментами
-dst: "/Users/yaroslav/Yandex.Disk.localized/ssd_disk/003_Learning_eng_code/002_programming/001_my_code_projects/000_stored_all_repos/CV/tools-for-CV-Enginer/001_yolo_tools/014_compare_results_yolo"     # путь для сохранения результатов
+src: "/Volumes/Orico/projetcs_sbs/001_green-houses/001_DS_models/002_tops/001_tops_detection/003_expiriments/006_expiriments_tops/results"  # путь к директории с экспериментами
+dst: "/Volumes/Orico/projetcs_sbs/001_green-houses/001_DS_models/002_tops/001_tops_detection/003_expiriments/006_expiriments_tops/compare_results"     # путь для сохранения результатов
