--- a/005_process_collect_dataset/008_assembly_train_set/configs/conf_dataset_info.yaml
+++ b/005_process_collect_dataset/008_assembly_train_set/configs/conf_dataset_info.yaml
@@ -1,18 +1,18 @@
 
 # Путь к исходным данным, папкам с источниками
-path_data: "/Volumes/Orico/projetcs_sbs/001_green-houses/001_DS_models/001_leaves_diseases/002_quality_classifier/001_raw_data"
+path_data: "/Volumes/Orico/projetcs_sbs/001_green-houses/001_DS_models/003_tomatos/003_tomatoes_ripeness_stage/002_train_data/001_train_18_02_25/data/cropped"
 # Путь к файлу с итоговыми данными 
 path_final_data: "path_final_data.txt"
 
 
 # Путь для сохранения excel файла
-path_out_excel: /Volumes/Orico/projetcs_sbs/001_green-houses/001_DS_models/001_leaves_diseases/002_quality_classifier/002_train_data/008_train_set
+path_out_excel: /Volumes/Orico/projetcs_sbs/001_green-houses/001_DS_models/003_tomatos/003_tomatoes_ripeness_stage/002_train_data/001_train_18_02_25/data/
 # Имя директории для сохранения excel файла
 name_excel_file: all_sources_data.csv
 
 
 # Список классов types =  [int, str]
-classes: [1, 2, 3, 4, 5, 6, 7]
+classes: [1, 2, 3, 4, 5, 13, 14, 15]
 
 
 
