yolo cahnge classes

--- a/001_yolo_tools/001_change_yolo_classes/003_remap_yolo_classes/config_OLD.yaml
+++ b/001_yolo_tools/001_change_yolo_classes/003_remap_yolo_classes/config_OLD.yaml
@@ -6,12 +6,9 @@ was:
   - "background_top"
   - "trarget_top"
 
-
-
-# remap:
-#   00_target_top: trarget_top
-#   01_background_top: background_top
-#   02_strip: none
-#   03_coil: none
-#   04_loose_strip: none
-
+remap:
+  00_target_top: trarget_top
+  01_background_top: background_top
+  02_strip: none
+  03_coil: none
+  04_loose_strip: none
