--- a/007_segment/005_plot_segANDcombined/config.yaml
+++ b/007_segment/005_plot_segANDcombined/config.yaml
@@ -1,18 +1,19 @@
 # Configuration for combined YOLO segmentation visualization
 # Directory containing original images
-src_imgs: "/Volumes/T7_Shiled/green/001_data_green/001_leaves/004_definite_seg/001_raw_data/004_022_photo_iphone_Yaroslav/006_labeling/результат разметки/005_разметка_средняя степень/001_разметка_средняя_степень_290425_Гелия/project-45-at-2025-04-30-05-17-06735457/images"
+src_imgs: "/Volumes/T7_Shiled/green/001_data_green/001_leaves/004_definite_seg/001_raw_data/004_022_photo_iphone_Yaroslav/006_labeling/результат разметки/002_разметка_здоровый_механика/001_здоровый_механика_21042025_Гелия/project-38-at-2025-04-21-13-37-f6967055/images"
 
 # Directory containing YOLO segmentation labels (.txt files)
-src_labels: "/path/to/yolo/labels"
+src_labels: "/Volumes/T7_Shiled/green/001_data_green/001_leaves/004_definite_seg/001_raw_data/004_022_photo_iphone_Yaroslav/006_labeling/результат разметки/002_разметка_здоровый_механика/001_здоровый_механика_21042025_Гелия/project-38-at-2025-04-21-13-37-f6967055/labels"
 
 # Path to classes.txt file
-classes_txt: "/path/to/classes.txt"
+classes_txt: "/Volumes/T7_Shiled/green/001_data_green/001_leaves/004_definite_seg/001_raw_data/004_022_photo_iphone_Yaroslav/006_labeling/результат разметки/002_разметка_здоровый_механика/001_здоровый_механика_21042025_Гелия/project-38-at-2025-04-21-13-37-f6967055/classes.txt"
 
 # Directory where visualized images with segmentation will be saved
-dst_plotted: "/path/to/visualized/images"
+dst_plotted: "/Volumes/T7_Shiled/green/001_data_green/001_leaves/004_definite_seg/001_raw_data/004_022_photo_iphone_Yaroslav/006_labeling/результат разметки/002_разметка_здоровый_механика/001_здоровый_механика_21042025_Гелия/project-38-at-2025-04-21-13-37-f6967055/plotted"
 
 # Directory where combined images (original + segmentation side by side) will be saved
-combined: "/path/to/combined/images"
+combined: "/Volumes/T7_Shiled/green/001_data_green/001_leaves/004_definite_seg/001_raw_data/004_022_photo_iphone_Yaroslav/006_labeling/результат разметки/002_разметка_здоровый_механика/001_здоровый_механика_21042025_Гелия/project-38-at-2025-04-21-13-37-f6967055/combined"
+
 
 # Optional parameters can be added here if needed in the future:
 # visualization:
