--- a/001_yolo_tools/001_change_yolo_classes/004_remap_yolo_new/config.yaml
+++ b/001_yolo_tools/001_change_yolo_classes/004_remap_yolo_new/config.yaml
@@ -1,6 +1,6 @@
-src_annot_dir: "/fanxiangssd/yaroslav/projects/004_sk10/data/data/001_raw_data/001_039_roboflow_construction/003_unverified_annotation/000_hypothesis/Construction.v1i.yolov11/train/labels"
-dst_annot_dir: "/fanxiangssd/yaroslav/projects/004_sk10/data/data/001_raw_data/001_039_roboflow_construction/003_unverified_annotation/000_hypothesis/selected/train/labels"
-dst_classes:   "/fanxiangssd/yaroslav/projects/004_sk10/data/data/001_raw_data/001_039_roboflow_construction/003_unverified_annotation/000_hypothesis/selected/train/classes.txt"
+src_annot_dir: "/fanxiangssd/yaroslav/projects/004_sk10/data/data/001_raw_data/001_001_SH17_kaagle/003_unverified_annotation/archive/labels"
+dst_annot_dir: "/fanxiangssd/yaroslav/projects/004_sk10/data/data/001_raw_data/001_001_SH17_kaagle/005_verified_annotation/004_hypothesis/labels"
+dst_classes:   "/fanxiangssd/yaroslav/projects/004_sk10/data/data/001_raw_data/001_001_SH17_kaagle/005_verified_annotation/004_hypothesis/classes.txt"
 
 
 # as_is_classes:
@@ -9,16 +9,36 @@ dst_classes:   "/fanxiangssd/yaroslav/projects/004_sk10/data/data/001_raw_data/0
 #     - 03_Face
 #     - 04_Helmet
 
-as_is_classes: ['board', 'brick', 'cutter', 'ebox', 'fence', 'handcart', 'helmet', 'hook', 'hopper', 'person', 'rebar', 'scaffold', 'slogan', 'vest', 'wood']
-
+as_is_classes: 
+  - 0_person
+  - 1_ear
+  - 2_ear-mufs
+  - 3_face
+  - 4_face-guard
+  - 5_face-mask
+  - 6_foot
+  - 7_tool
+  - 8_glasses
+  - 9_gloves
+  - 10_helmet
+  - 11_hands
+  - 12_head
+  - 13_medical-suit
+  - 14_shoes
+  - 15_safety-suit
+  - 16_safety-vest
 
 
 remap:
-    person: 01_Person
-    helmet: 02_Helmet
+    0_person: 01_Person
+    12_head: 02_Head
+    10_helmet: 03_Helmet
+
 
 
 
 order_new_classes:
     - 01_Person
-    - 02_Helmet
+    - 02_Head
+    - 03_Helmet
+
